// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider componentConfig.Affix default 1`] = `
<div
  class=""
>
  <div
    class=""
  >
    <span />
  </div>
</div>
`;

exports[`ConfigProvider componentConfig.Affix set className globally 1`] = `
<div
  class="global-default-class"
>
  <div
    class=""
  >
    <span />
  </div>
</div>
`;

exports[`ConfigProvider componentConfig.Affix set className globally and component set className itself. 1`] = `
<div
  class="component-class"
>
  <div
    class=""
  >
    <span />
  </div>
</div>
`;

exports[`ConfigProvider componentConfig.Affix set data-* property 1`] = `
<div
  class=""
  data-test-name="Affix"
>
  <div
    class=""
  >
    <span />
  </div>
</div>
`;
